--- a/config.env
+++ b/config.env
@@ -18,7 +18,7 @@ FORCE_SUB_1 = -1001592072909
 DATABASE_TYPE = "mongo"
 
 # DATABASE ISI SQL ATAU MONGODB Sesuai DATABASE_TYPE
-DB_URL = "mongodb+srv://rare:kel1@cluster0.j6db1vw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DB_URL = "mongodb+srv://kel10:kel11@cluster0.j2kwn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 # jika kalian mengisi MongoDB tambahkan database name
 # SARAN ; GUNAKAN SESUAI USERNAME BOT
